--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Último push: sincronização e reprodução automática de vídeo para todos os jogadores -->
 <!DOCTYPE html>
 <html lang="pt-PT">
 <head>
@@ -49,28 +48,26 @@
 
   const { extension, isHost } = await getContext();
   const cutsceneState = useSyncState("cutscene-video", null);
-  
   cutsceneState.subscribe(handleStateUpdate);
 
   const input = document.getElementById("videoURL");
-  const launchBtn = document.querySelector("button#launchBtn");
+  const launchBtn = document.getElementById("launchBtn");
+
   launchBtn.addEventListener("click", () => {
-    const url = input.value;
-    if (!url) return alert("Insere um link de vídeo válido!");
+    if (!isHost) return alert("Apenas o GM pode lançar a cutscene!");
+    const url = input.value.trim();
+    if (!url.endsWith(".mp4")) return alert("Insere um link de vídeo .mp4 válido!");
     cutsceneState.set(url);
   });
 
   function handleStateUpdate(url) {
     if (!url) return;
 
-    const video = document.createElement("video");
-    video.src = url;
-    video.controls = true;
-    video.autoplay = true;
-    video.style.width = "100%";
-    video.style.height = "100%";
+    const existingOverlay = document.getElementById("cutscene-overlay");
+    if (existingOverlay) existingOverlay.remove();
 
     const overlay = document.createElement("div");
+    overlay.id = "cutscene-overlay";
     overlay.style.position = "fixed";
     overlay.style.top = 0;
     overlay.style.left = 0;
@@ -78,6 +75,14 @@
     overlay.style.height = "100vh";
     overlay.style.backgroundColor = "black";
     overlay.style.zIndex = 9999;
+
+    const video = document.createElement("video");
+    video.src = url;
+    video.controls = true;
+    video.autoplay = true;
+    video.style.width = "100%";
+    video.style.height = "100%";
+    video.style.objectFit = "contain";
     overlay.appendChild(video);
 
     document.body.appendChild(overlay);
@@ -100,16 +105,6 @@
     document.addEventListener("keydown", onKeyDown);
     video.addEventListener("ended", removeOverlay);
   }
-
-  function closeCutscene() {
-    const container = document.getElementById("videoContainer");
-    const video = document.getElementById("cutsceneVideo");
-    container.style.display = "none";
-    document.getElementById("closeBtn").style.display = "none";
-    video.pause();
-    video.src = "";
-    container.classList.remove("fade-in");
-  }
-</script>
+  </script>
 </body>
 </html>
