--- a/index.html
+++ b/index.html
@@ -44,67 +44,74 @@
   <button id="closeBtn" onclick="closeCutscene()">❌</button>
 
   <script type="module">
-  import { getContext, useSyncState } from "https://cdn.owlbear.rodeo/sdk.js";
+import { getContext, useSyncState } from "https://cdn.owlbear.rodeo/sdk.js";
 
-  const { extension, isHost } = await getContext();
-  const cutsceneState = useSyncState("cutscene-video", null);
-  cutsceneState.subscribe(handleStateUpdate);
+const { extension, isHost } = await getContext();
+const cutsceneState = useSyncState("cutscene-video", null);
+cutsceneState.subscribe(handleStateUpdate);
 
-  const input = document.getElementById("videoURL");
-  const launchBtn = document.getElementById("launchBtn");
+const input = document.getElementById("videoURL");
+const launchBtn = document.getElementById("launchBtn");
 
-  launchBtn.addEventListener("click", () => {
-    if (!isHost) return alert("Apenas o GM pode lançar a cutscene!");
-    const url = input.value.trim();
-    if (!url.endsWith(".mp4")) return alert("Insere um link de vídeo .mp4 válido!");
-    cutsceneState.set(url);
-  });
+if (!isHost) {
+  input.style.display = "none";
+  launchBtn.style.display = "none";
+}
 
-  function handleStateUpdate(url) {
-    if (!url) return;
+launchBtn.addEventListener("click", () => {
+  if (!isHost) return alert("Apenas o GM pode lançar a cutscene!");
+  const url = input.value.trim();
+  if (!url.endsWith(".mp4")) return alert("Insere um link de vídeo .mp4 válido!");
+  cutsceneState.set(url);
+});
 
-    const old = document.getElementById("cutscene-overlay");
-    if (old) old.remove();
+function handleStateUpdate(url) {
+  if (!url) return;
 
-    const overlay = document.createElement("div");
-    overlay.id = "cutscene-overlay";
-    overlay.style.position = "fixed";
-    overlay.style.top = 0;
-    overlay.style.left = 0;
-    overlay.style.width = "100vw";
-    overlay.style.height = "100vh";
-    overlay.style.backgroundColor = "black";
-    overlay.style.zIndex = 9999;
+  const old = document.getElementById("cutscene-overlay");
+  if (old) old.remove();
 
-    const video = document.createElement("video");
-    video.src = url;
-    video.controls = true;
-    video.autoplay = true;
-    video.style.width = "100%";
-    video.style.height = "100%";
-    video.style.objectFit = "contain";
-    overlay.appendChild(video);
+  const overlay = document.createElement("div");
+  overlay.id = "cutscene-overlay";
+  overlay.style.position = "fixed";
+  overlay.style.top = 0;
+  overlay.style.left = 0;
+  overlay.style.width = "100vw";
+  overlay.style.height = "100vh";
+  overlay.style.backgroundColor = "black";
+  overlay.style.zIndex = 9999;
 
-    document.body.appendChild(overlay);
+  const video = document.createElement("video");
+  video.src = url;
+  video.controls = true;
+  video.autoplay = true;
+  video.style.width = "100%";
+  video.style.height = "100%";
+  video.style.objectFit = "contain";
+  video.setAttribute("playsinline", "true");
+  overlay.appendChild(video);
 
-    setTimeout(() => {
-      if (overlay.requestFullscreen) overlay.requestFullscreen();
-      else if (overlay.webkitRequestFullscreen) overlay.webkitRequestFullscreen();
-    }, 300);
+  document.body.appendChild(overlay);
 
-    function removeOverlay() {
-      if (document.fullscreenElement) document.exitFullscreen();
-      overlay.remove();
-      document.removeEventListener("keydown", onKeyDown);
-    }
+  // Tenta fullscreen
+  setTimeout(() => {
+    if (overlay.requestFullscreen) overlay.requestFullscreen();
+    else if (overlay.webkitRequestFullscreen) overlay.webkitRequestFullscreen();
+  }, 300);
 
-    function onKeyDown(e) {
-      if (e.key === "Escape") removeOverlay();
-    }
-
-    document.addEventListener("keydown", onKeyDown);
-    video.addEventListener("ended", removeOverlay);
+  function removeOverlay() {
+    if (document.fullscreenElement) document.exitFullscreen();
+    overlay.remove();
+    document.removeEventListener("keydown", onKeyDown);
   }
-  </script>
+
+  function onKeyDown(e) {
+    if (e.key === "Escape") removeOverlay();
+  }
+
+  document.addEventListener("keydown", onKeyDown);
+  video.addEventListener("ended", removeOverlay);
+}
+</script>
 </body>
 </html>
