Mensagem do commit

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       user-select: none;
       width: 100%;
       max-width: 400px;
+      display: block;
+      margin-bottom: 12px;
     }
     #launchBtn:hover {
       background-color: #c0392b;
