Reverter para UI funcional - GM controla e players veem cutscene

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       const video = document.getElementById("cutsceneVideo");
       const videoContainer = document.getElementById("videoContainer");
 
-      // Mostrar UI correta para GM e Players
+      // Mostrar UI certa para GM e Players
       if (isHost) {
         gmUI.style.display = "block";
         playerUI.style.display = "none";
